@@ -1,3 +1,8 @@
+2007-07-17  Andreas Kupries  <andreask@activestate.com>
+
+	* support/installation/modules.tcl: New module 'uev' added, for
+	  the generation and handling of user events.
+
 2007-05-04  Andreas Kupries  <andreask@activestate.com>
 
 	* support/installation/modules.tcl: New module 'nns' added, a
